--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.2.8"
-  }
+  "vite": "^5.4.0",
+  "tailwindcss": "^3.4.1",
+  "postcss": "^8.4.32",
+  "autoprefixer": "^10.4.16",
+  "@vitejs/plugin-react": "^4.1.0"
+}
+
 }
