--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "weather-ai-dashboard",
+  "name": "climabotx-frontend",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -9,14 +10,14 @@
   "dependencies": {
     "axios": "^1.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.7.2"
   },
   "devDependencies": {
-  "vite": "^5.4.0",
-  "tailwindcss": "^3.4.1",
-  "postcss": "^8.4.32",
-  "autoprefixer": "^10.4.16",
-  "@vitejs/plugin-react": "^4.1.0"
-}
-
+    "@vitejs/plugin-react": "^4.1.0",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.2.8"
+  }
 }
